data/collection/fixes/descriptions/scala/scala-5735
```
% scalac29 ./a.scala 
./a.scala:8: error: type mismatch;
 found   : (x: Int)Int <and> => String
 required: Int
  val z: Int = a
               ^
one error found

% scalac210 ./a.scala 
./a.scala:8: error: type mismatch;
 found   : <error>
 required: Int
  val z: Int = a
               ^
one error found
```
```scala
abstract class Base {
  def a: String = "one"
}
class Clazz extends Base {
  def a(x: Int): Int = 2
  val z: Int = a
}
```